k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monokle-admission-controller-server
  namespace: monokle-admission-controller
  labels:
    app: monokle-admission-controller-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monokle-admission-controller-server
  template:
    metadata:
      labels:
        app: monokle-admission-controller-server
    spec:
      containers:
      - name: server
        image: admission-webhook
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: monokle-admission-controller-tls
          optional: true
      serviceAccountName: monokle-policies-sa
---
apiVersion: v1
kind: Service
metadata:
  name: monokle-admission-controller-server
  namespace: monokle-admission-controller
spec:
  selector:
    app: monokle-admission-controller-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: monokle-admission-controller-webhook
webhooks:
  - name: monokle-admission-controller-server.monokle-admission-controller.svc
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: monokle-admission-controller-server
        namespace: monokle-admission-controller
        path: "/validate"
      caBundle: ""
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-node-lease
            - kube-public
            - kube-system
            - monokle-admission-controller
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
        scope: "*"
