k8s/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: demo-webhook
  annotations:
    cert-manager.io/inject-ca-from: monokle-admission-controller/monokle-admission-controller-tls-secret
webhooks:
  - name: webhook-server.monokle-admission-controller.svc
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: webhook-server
        namespace: monokle-admission-controller
        path: "/validate"
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
        scope: "*"
